Fix dvrk steps guide backgrounds for dark mode

--- a/src/www/styles/pages/dvrk-styles.less
+++ b/src/www/styles/pages/dvrk-styles.less
@@ -49,7 +49,7 @@
     column-gap: 2em;
 
     .dvrk-grid-title {
-        background-color: #161616;
+        background-color: var(--title-bg-color);
         color: white;
         font-family: "Press Start 2P";
         padding: 8px 0 8px 8px;
